--- a/Facebook Page/index.html
+++ b/Facebook Page/index.html
@@ -2,8 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Facebook Login Page (Clone)</title>
+  <title>Facebook - log in or sign up</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/2021_Facebook_icon.svg/2048px-2021_Facebook_icon.svg.png">
 
 </head>
 <body>
@@ -29,11 +30,11 @@
 					<input type="submit" name="submit" id="submit" value="Log In">
 					<a href="#" target="_self" class="forgot">Forgotten password?</a>
 					<div class="line"></div>
-					<a href="#" target="_self" class="create-new-acc">Create New Account</a>
+					<a href="https://www.facebook.com/pages/create/?ref_type=registration_form" target="_self" class="create-new-acc">Create New Account</a>
 				</form>
 			</div>
 			<div class="create-page" style="text-align: center;">
-				<p><a href="#" target="_self">Create a Page</a> for a celebrity, band or business.</p>
+				<p><a href="https://www.facebook.com/pages/create/?ref_type=registration_form" target="_self">Create a Page</a> for a celebrity, band or business.</p>
 			</div>
 		</div>
 	</div>
@@ -50,7 +51,7 @@
 		<div class="language-section">
 			<ul>
 				<li>English (UK)</li>
-				<li><a href="#" target="_self">বাংলা</a></li>
+				<li><a href="#" target="_self">বাং লা</a></li>
 				<li><a href="#" target="_self">অসমীয়া</a></li>
 				<li><a href="#" target="_self">हिन्दी</a></li>
 				<li><a href="#" target="_self">Bahasa Indonesia</a></li>
