--- a/Facebook Page/index.html
+++ b/Facebook Page/index.html
@@ -28,7 +28,7 @@
 					<input type="text" name="email-or-number" id="email-or-number" placeholder="Email address or phone number">
 					<input type="password" name="password" id="password" placeholder="Password">
 					<input type="submit" name="submit" id="submit" value="Log In">
-					<a href="#" target="_self" class="forgot">Forgotten password?</a>
+					<a href="#" target="_self" class="forgot">Forgot password?</a>
 					<div class="line"></div>
 					<a href="https://www.facebook.com/pages/create/?ref_type=registration_form" target="_self" class="create-new-acc">Create New Account</a>
 				</form>
